<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings related to application -->

    <string name="app_name">Karotz Controller</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_manage_devices">Manage Devices</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop_sound">Stop</string>
    <string name="progress_karotz_title">Talking to Karotz</string>
    <string name="progress_karotz_description">Please wait&#x2026;</string>

    <!-- Strings related to Main -->

    <string name="version">Version</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_item_icon_desc">Icon</string>
    <string name="err_no_connection">Internet connection is not active, configure your device</string>
    <string name="err_cannot_connect">Cannot communicate with Karotz, check host name in settings</string>

    <!-- Strings related to System fragment -->

    <string name="version_label">OpenKarotz Version</string>
    <string name="patch_label">OpenKarotz Patch</string>
    <string name="onoff_label">Karotz Status</string>
    <string name="on_label">ON</string>
    <string name="off_label">OFF</string>
    <string name="err_cannot_getversion">Cannot get Karotz version, check host name</string>
    <string name="err_cannot_wakeup">Cannot wake Karotz up, check host name</string>
    <string name="err_cannot_sleep">Cannot put Karotz to sleep, check host name</string>

    <!-- Strings related to Color fragment -->

    <string name="pulse_label">Pulse</string>
    <string name="color_label">Color</string>

    <!-- Strings related to Radio fragment -->

    <string name="radio_button_desc">Radio</string>
    <string name="radio_starting">Starting Radio:</string>

    <!-- Strings related to Ears fragment -->

    <string name="ears_reset_label">Reset Position</string>
    <string name="ears_reset_desc">Reset</string>
    <string name="ears_random_label">Random Position</string>
    <string name="ears_random_desc">Random</string>
    <string name="ears_disabled_label">Disable Ears</string>

    <!-- Strings related to Settings -->

    <string name="karotz_host_pref_title">OpenKarotz Host</string>
    <string name="karotz_host_pref_summary">Host name or IP address:</string>

    <!-- TTS Page -->
    <string name="page_tts">TTS</string>
    <string name="tts_voice_label">Voice</string>
    <string name="tts_text_label">Text to speak</string>
    <string name="tts_text_hint">Enter text here…</string>
    <string name="tts_speak_button">Speak</string>
    <string name="tts_speaking">Speaking…</string>
    <string name="tts_success">Speaking!</string>
    <string name="tts_error_empty">Please enter some text</string>
    <string name="tts_error_no_voices">No voices available</string>
    <string name="tts_error_no_voice_selected">Please select a voice</string>
    <string name="tts_error_loading_voices">Failed to load voices</string>
    <string name="tts_error_speaking">Failed to speak</string>

    <!-- Home Page Random Buttons -->
    <string name="home_random_mood">Random Mood</string>
    <string name="home_random_ears">Random Ears</string>
    <string name="home_random_mood_success">Playing random mood!</string>
    <string name="home_random_mood_error">Failed to play mood</string>
    <string name="home_random_ears_success">Ears moved!</string>
    <string name="home_random_ears_error">Failed to move ears</string>

    <!-- Color Picker -->
    <string name="color_preview_label">Preview</string>
    <string name="color_red_label">Red</string>
    <string name="color_green_label">Green</string>
    <string name="color_blue_label">Blue</string>
    <string name="color_apply_button">Apply Color</string>
    <string name="color_quick_label">Quick colors</string>
    <string name="color_applied">Color applied!</string>

    <!-- Radio Page -->
    <string name="radio_no_stations">No radio stations found</string>
    <string name="radio_icon_desc">Radio icon</string>
    <string name="radio_play_desc">Play radio</string>

    <!-- About Page -->
    <string name="about_app_name">Karotz Controller</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_description">Control your OpenKarotz smart rabbit from your Android device. Change LED colors, move ears, play radios, use text-to-speech, and more!</string>

    <string name="about_developer_title">Developer</string>
    <string name="about_developer_name">miniil</string>
    <string name="about_website">www.miniil.be</string>

    <string name="about_credits_title">Credits</string>
    <string name="about_credits_original">Based on the original OpenKarotz-Android project by:</string>
    <string name="about_original_author">Olivier Bagot (hobbe)</string>
    <string name="about_openkarotz_link">OpenKarotz Project</string>
    <string name="about_credits_ai">Development assisted by Claude AI (Anthropic)</string>

    <string name="about_license_title">License</string>
    <string name="about_license">This software is released under the MIT License. You are free to use, modify, and distribute this software.</string>

    <string name="about_contact_button">Contact</string>
    <string name="about_website_button">Visit Website</string>
    <string name="about_support_button">Support This Project</string>

    <string name="about_copyright">© 2025 miniil. All rights reserved.</string>

    <string name="about_email_subject">Karotz Controller - Contact</string>
    <string name="about_email_chooser">Send email…</string>

</resources>
