<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_sound_stop"
        android:icon="@drawable/ic_action_sound_stop"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:title="@string/action_stop_sound"/>
    <item
        android:id="@+id/action_manage_devices"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="85"
        app:showAsAction="ifRoom"
        android:title="@string/action_manage_devices"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"/>


</menu>